--- a/style/style.css
+++ b/style/style.css
@@ -18,12 +18,14 @@ h1 {
   font-size: 90px;
   font-family: 'Poiret One', cursive;
   font-weight: normal;
+  text-align: center;
 }
 
 h2 {
   font-size: 60px;
   font-family: 'Poiret One', cursive;
   font-weight: normal;
+  text-align: center;
 }
 
 h3 {
@@ -60,7 +62,7 @@ nav {
   display: flex;
   /*background-color: #8CB7B5;*/
   /*opacity: 0.5;*/
-  background-color: rgba(61, 75, 169, 0.28);
+  background-color: rgba(232, 44, 210, 0.38);
 }
 
 img {
@@ -130,6 +132,79 @@ footer {
   background-color: rgba(54, 164, 201, 0.28);
 }
 
+iframe {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.slides {
+  height: 466px;
+  width:700px;
+  margin-top: 40px;
+  border: 20px solid #ffffff;
+  position: relative;
+}
+
+.slides>img {
+  position: absolute;
+  top: 0; left: 0;
+  z-index: 3;
+  -webkit-animation: slideshow 12s linear 0s infinite;
+  -moz-animation: slideshow 12s linear 0s infinite;
+  -ms-animation: slideshow 12s linear 0s infinite;
+  -o-animation: slideshow 12s linear 0s infinite;
+  animation: slideshow 12s linear 0s infinite;
+}
+
+.slides>img:nth-child(2) {
+  z-index: 2;
+  -webkit-animation: slideshow 12s linear 4s infinite;
+  -moz-animation: slideshow 12s linear 4s infinite;
+  -ms-animation: slideshow 12s linear 4s infinite;
+  -o-animation: slideshow 12s linear 4s infinite;
+  animation: slideshow 12s linear 4s infinite;
+}
+
+.slides>img:nth-child(3) {
+  z-index: 1;
+  -webkit-animation: slideshow 12s linear 8s infinite;
+  -moz-animation: slideshow 12s linear 8s infinite;
+  -ms-animation: slideshow 12s linear 8s infinite;
+  -o-animation: slideshow 12s linear 8s infinite;
+  animation: slideshow 12s linear 8s infinite;
+}
+
+@-webkit-keyframes slideshow {
+   25% { opacity: 1;}
+   33.33% { opacity: 0;} 
+   91.66% { opacity: 0;}
+   100% { opacity: 1;}
+}
+@-moz-keyframes slideshow {
+   25% { opacity: 1;}
+   33.33% { opacity: 0;} 
+   91.66% { opacity: 0;}
+   100% { opacity: 1;}
+}
+@-ms-keyframes slideshow {
+   25% { opacity: 1;}
+   33.33% { opacity: 0;} 
+   91.66% { opacity: 0;}
+   100% { opacity: 1;}
+}
+@-o-keyframes slideshow {
+   25% { opacity: 1;}
+   33.33% { opacity: 0;} 
+   91.66% { opacity: 0;}
+   100% { opacity: 1;}
+}
+@keyframes slideshow {
+   25% { opacity: 1;}
+   33.33% { opacity: 0;} 
+   91.66% { opacity: 0;}
+   100% { opacity: 1;}
+}
+
 .index{
   background-image: url("../images/background.jpg");
   background-repeat: no-repeat;
@@ -151,7 +226,7 @@ footer {
 }
 
 .contact {
-  background-image: url("../images/shells-792912_960_720.jpg");
+  background-image: url("../images/storefront.jpg");
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-attachment: fixed;
@@ -207,6 +282,7 @@ footer {
   text-align: center;
 }
 
+
 .icon {
   display: flex;
   align-items: center;
@@ -247,12 +323,5 @@ footer {
   margin: 15px;
 }
 
-.slides {
-  height: 500px;
-  margin-top: 40px;
-  text-decoration: underline;
-  border: 50px double #ffffff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+
+
